src/objects/Customer_Exchange_Summary_Form_Response__c.object
<CustomObject>
    <description>This will be a Child object of Customer Exchange Summary which will store the responses from Customer.</description>
    <fields>
        <fullName>AC_CSN__c</fullName>
        <description>AC CSN</description>
        <inlineHelpText>AC CSN</inlineHelpText>
        <label>AC CSN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AC_TSN__c</fullName>
        <description>AC TSN</description>
        <inlineHelpText>AC TSN</inlineHelpText>
        <label>AC TSN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWB__c</fullName>
        <description>AWB</description>
        <inlineHelpText>AWB</inlineHelpText>
        <label>AWB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field used to check which Exchange Summary response is active</description>
        <inlineHelpText>Field used to check which Exchange Summary response is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreement_to_Non_Incident_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Agreement to Non-Incident-Statement</description>
        <inlineHelpText>Agreement to Non-Incident-Statement</inlineHelpText>
        <label>Agreement to Non-Incident-Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aircraft_Model__c</fullName>
        <description>Aircraft Model - will store Aircraft Model</description>
        <inlineHelpText>Aircraft Model</inlineHelpText>
        <label>Aircraft Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_SN__c</fullName>
        <description>Aircraft SN</description>
        <inlineHelpText>Aircraft SN</inlineHelpText>
        <label>Aircraft SN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <formula>IF(NOT(ISBLANK(Customer_Exchange_Summary__r.inscor__Original_SO_ID__r.inscor__Customer__r.BillingStreet)),      Customer_Exchange_Summary__r.inscor__Original_SO_ID__r.inscor__Customer__r.BillingStreet + &apos;, &apos;, &apos;&apos;) 
+ 
IF(NOT(ISBLANK(Customer_Exchange_Summary__r.inscor__Original_SO_ID__r.inscor__Customer__r.BillingCity)),        Customer_Exchange_Summary__r.inscor__Original_SO_ID__r.inscor__Customer__r.BillingCity + &apos;, &apos;,&apos;&apos;) 
+
IF(NOT(ISBLANK(Customer_Exchange_Summary__r.inscor__Original_SO_ID__r.inscor__Customer__r.BillingState)),       Customer_Exchange_Summary__r.inscor__Original_SO_ID__r.inscor__Customer__r.BillingState + &apos;, &apos;, &apos;&apos;) 
+
IF(NOT(ISBLANK(Customer_Exchange_Summary__r.inscor__Original_SO_ID__r.inscor__Customer__r.BillingPostalCode)),Customer_Exchange_Summary__r.inscor__Original_SO_ID__r.inscor__Customer__r.BillingPostalCode + &apos;, &apos;, &apos;&apos;) 
+
IF(NOT(ISBLANK(Customer_Exchange_Summary__r.inscor__Original_SO_ID__r.inscor__Customer__r.BillingCountry)),     Customer_Exchange_Summary__r.inscor__Original_SO_ID__r.inscor__Customer__r.BillingCountry, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSN_Value__c</fullName>
        <description>CSN Value</description>
        <inlineHelpText>CSN Value</inlineHelpText>
        <label>CSN Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSO_Value__c</fullName>
        <description>CSO Value</description>
        <inlineHelpText>CSO Value</inlineHelpText>
        <label>CSO Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSO__c</fullName>
        <description>CSO</description>
        <inlineHelpText>CSO</inlineHelpText>
        <label>CSO/CSN</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CSN</fullName>
                </value>
                <value>
                    <fullName>CSO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <description>Carrier</description>
        <inlineHelpText>Carrier</inlineHelpText>
        <label>Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FedEx</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>DHL</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Exchange_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Exchange Summary</description>
        <inlineHelpText>Customer Exchange Summary</inlineHelpText>
        <label>Customer Exchange Summary</label>
        <referenceTo>inscor__Customer_Exchange_Summary__c</referenceTo>
        <relationshipLabel>Customer Exchange Summary Form Responses</relationshipLabel>
        <relationshipName>Customer_From_Customer_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>Customer Name - Name of Customer</description>
        <inlineHelpText>Customer Name</inlineHelpText>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_PO_Number__c</fullName>
        <description>Customer PO Number - will store PO Number</description>
        <inlineHelpText>Customer PO Number</inlineHelpText>
        <label>Customer PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field used to lock the response so customer will not able to fill the exchange form again</description>
        <inlineHelpText>Field used to lock the response so customer will not able to fill the exchange form again</inlineHelpText>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Part Number - will store Part Number</description>
        <inlineHelpText>Original Part Number</inlineHelpText>
        <label>PN</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Customer Exchange Summary Form Responses</relationshipLabel>
        <relationshipName>PN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Form_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Form Response</description>
        <inlineHelpText>Parent Form Response</inlineHelpText>
        <label>Parent Form Response</label>
        <referenceTo>Customer_Exchange_Summary_Form_Response__c</referenceTo>
        <relationshipLabel>Customer Exchange Summary Form Responses</relationshipLabel>
        <relationshipName>Customer_Exchange_Summary_Form_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Removal_Comments__c</fullName>
        <description>Reason for Removal (Other)</description>
        <inlineHelpText>Reason for Removal (Other)</inlineHelpText>
        <label>Reason for Removal (Other)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Removal__c</fullName>
        <description>Reason for Removal</description>
        <inlineHelpText>Reason for Removal</inlineHelpText>
        <label>Reason for Removal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Failed Worn to Limit</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SN__c</fullName>
        <description>SN - will store SN.</description>
        <inlineHelpText>SN</inlineHelpText>
        <label>SN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales Order</description>
        <inlineHelpText>Sales Order</inlineHelpText>
        <label>Sales Order</label>
        <referenceTo>inscor__Sales_Order__c</referenceTo>
        <relationshipLabel>Customer Exchange Summary Form Responses</relationshipLabel>
        <relationshipName>Customer_From_Sales_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TSN_Value__c</fullName>
        <description>TSN Value</description>
        <inlineHelpText>TSN Value</inlineHelpText>
        <label>TSN Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSO_Value__c</fullName>
        <description>TSO Value</description>
        <inlineHelpText>TSO Value</inlineHelpText>
        <label>TSO Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSO__c</fullName>
        <description>TSO</description>
        <inlineHelpText>TSO</inlineHelpText>
        <label>TSO/TSN</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TSN</fullName>
                </value>
                <value>
                    <fullName>TSO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Customer Exchange Summary Form Response</label>
    <nameField>
        <displayFormat>CFR-{000000000}</displayFormat>
        <label>Customer Exchange Summary Form Response</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Exchange Summary Form Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>